--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --max-old-space-size=8192 index.js"
+    "start": "node --max-old-space-size=8192 index.js",
+    "parse": "node --max-old-space-size=8192 parse.js"
   },
   "keywords": [],
   "author": "",
